--- a/.classpath
+++ b/.classpath
@@ -1,11 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="src">
+		<attributes>
+			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="C:/WORKSPACES/Defender Workspace/Defender/natives"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry kind="lib" path="C:/Program Files (x86)/Java/jdk1.7.0_17/jre/lib/jfxrt.jar" sourcepath="C:/Program Files (x86)/Java/jdk1.7.0_17/src.zip">
 		<attributes>
 			<attribute name="javadoc_location" value="file:/C:/Program Files (x86)/Java/javadocs/api/"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="C:/WORKSPACES/Defender Workspace/Defender/lib/slick/lwjgl.jar"/>
+	<classpathentry kind="lib" path="C:/WORKSPACES/Defender Workspace/Defender/lib/slick/slick.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
